--- a/views/empty-room.ejs
+++ b/views/empty-room.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs') %>
-<%- include('partials/navbar.ejs') %>
+<%- include('partials/navbarLogout.ejs') %>
 
 <!-- This file and route are called EMPTY ROOM but it's only technically empty for the first user. After more users join it'll change dynamically with Javascript -->
 <div class="gradient-background">
