--- a/views/partials/navbarBackLogout.ejs
+++ b/views/partials/navbarBackLogout.ejs
@@ -1,4 +1,9 @@
-<nav id="navLog">
+<nav id="navBackLog">
+    <div id="backItem">
+        <a href="<%= linkToPage %>">
+            <img id="backButton" src="/img/backButton.png" alt="back button"/>
+        </a>
+    </div>
     <!-- TODO: Figure out how to use Vector here instead of PNG -->
     <!-- <img
       id="logo"
