Privacy Policy & Settings updated in modals

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,110 @@
 <%- include('partials/header.ejs') %> 
-<%- include('partials/navbar.ejs') %>
 
 <div class="gradient-background">
     <div class="background-box">
-        <h1>HOME PAGE</h1>
+
+        <img id="logoHome" alt="What Can We Play Today Logo" src="/img/StandardImgLogo.png"/>
+
         <br>
         <p style="color: white;"> <p>By using our site, you acknowledge that you have read and understand our </p>
         <br>
         <a href="/privacy-policy">PRIVACY POLICY</a>
+    
     </div>
     <div id="main-page-buttons">
-        <a href="/auth/steam">
-            <button>STEAM LOGIN</button>
-        </a>
-        <p style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
-        <a href="/alt-login">
-            <button>ALT LOGIN</button>
-        </a>
+        <!-- <a href="/auth/steam"> -->
+            <button id = "loginModal">STEAM LOGIN</button>
+            <p style="color: white; font-size: larger; margin-top: 1rem;"> OR </p>
+            <button id = "loginModal2">ALT LOGIN</button>
+            <div id = "modal" class = "modal">
+                <div class = "modal-content">
+                        <div class="background-box-pp">
+                    <span id = "back"> &times; </span>
+                    <span id = "close"> I UNDERSTAND </span>
+                    <h2>Disclaimer: Privacy Settings for Steam Users</h2>
+
+                    <p>In order for "What Can We Play Today" to function properly, your Steam profile and game details need to be set to public. Here's how you can change these settings:</p>
+        
+                    <ol>
+                        <li><strong>Access the Dropdown Menu</strong>: Click on your username in the upper right-hand corner of the Steam interface to display the dropdown menu.</li>
+                        <li><strong>View Profile</strong>: From the dropdown menu, select "View Profile".</li>
+                        <li><strong>Edit Profile</strong>: On your profile page, select "Edit Profile".</li>
+                        <li><strong>Privacy Settings</strong>: In the Edit Profile interface, navigate to the panel on the left-hand side and select "Privacy Settings".</li>
+                        <li><strong>Set to Public</strong>: In the Privacy Settings, ensure that your profile status and game details are set to "Public".</li>
+                    </ol>
+        
+                    <p>Please refer to the screenshot below for a visual guide on how the settings should look like.</p>
+        
+                    <!-- Add screenshot here -->
+                    <img src ="img/privSettings.png" alt="Steam Privacy Settings Screenshot">
+                    <video width = "640" height = "360" controls>
+                        <source src = "/img/privSettings.mp4" type = "video/mp4">
+                    </video>
+                </div>
+                </div>
+             </div>
+
+             <div id = "modal2" class = "modal">
+                <div class = "modal-content">
+                    <div class="background-box-pp">
+                    <span id = "back2"> &times; </span>
+                    <span id = "close2"> I UNDERSTAND </span>
+                    <h2>Disclaimer: Privacy Settings for Steam Users</h2>
+
+                    <p>In order for "What Can We Play Today" to function properly, your Steam profile and game details need to be set to public. Here's how you can change these settings:</p>
+        
+                    <ol>
+                        <li><strong>Access the Dropdown Menu</strong>: Click on your username in the upper right-hand corner of the Steam interface to display the dropdown menu.</li>
+                        <li><strong>View Profile</strong>: From the dropdown menu, select "View Profile".</li>
+                        <li><strong>Edit Profile</strong>: On your profile page, select "Edit Profile".</li>
+                        <li><strong>Privacy Settings</strong>: In the Edit Profile interface, navigate to the panel on the left-hand side and select "Privacy Settings".</li>
+                        <li><strong>Set to Public</strong>: In the Privacy Settings, ensure that your profile status and game details are set to "Public".</li>
+                    </ol>
+        
+                    <p>Please refer to the screenshot below for a visual guide on how the settings should look like.</p>
+        
+                    <!-- Add screenshot here -->
+                    <img src ="img/privSettings.png" alt="Steam Privacy Settings Screenshot">
+                    <video width = "640" height = "360" controls>
+                        <source src = "/img/privSettings.mp4" type = "video/mp4">
+                    </video>
+                </div>
+                </div>
+             </div>
     </div>
 </div>
+<script>
+    let modalTrigger = document.getElementById('loginModal');
+    var modal = document.getElementById("modal");
+    modalTrigger.addEventListener('click', function(){
+        modal.style.display = "block";
+    });
+
+
+    var acceptButton = document.getElementById("close");
+    acceptButton.addEventListener('click', function() {
+        window.location.href = "/auth/steam";
+    });
+
+    let modalTrigger2 = document.getElementById('loginModal2');
+    var modal2 = document.getElementById("modal2");
+    modalTrigger2.addEventListener('click', function(){
+        modal2.style.display = "block";
+    });
+
+    var acceptButton2 = document.getElementById("close2");
+    acceptButton2.addEventListener('click', function() {
+        window.location.href = "/alt-login";
+    });
+
+    let back = document.getElementById("back");
+    back.addEventListener('click', function(){
+        window.location.href = "/";
+    });
+
+    let back2 = document.getElementById("back2");
+    back2.addEventListener('click', function(){
+        window.location.href = "/";
+    });
+
+    </script>
