--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -281,9 +281,9 @@ ul, li {
     font-size: 1.25rem;
 }
 
-#copyRoomLink {
+/* #copyRoomLink {
 
-}
+} */
 
 #newList {
     font-size: 1.5rem;
@@ -388,9 +388,9 @@ ul, li {
     background-color: red;
 }
 
-#roomMembersList {
+/* #roomMembersList {
 
-}
+} */
 
 #genreDiv select, #menuDiv select {
     background-color: transparent;
@@ -495,4 +495,39 @@ ul, li {
 
 #navLog #logoutNavButton {
     flex: 0.5;
+}
+
+.modal{
+    display: none;
+    position: fixed;
+    padding-top: 50%;
+    /* left: 100; */
+    width: 100%;
+    height: 30%;
+}
+.modal-content{
+    background-color: #171A21;
+    color: white;
+    position: absolute;
+    width: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#close, #close2{
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    font-size: 30px;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+
+#back, #back2{
+    position: absolute;
+    top: 10px;
+    color: red;
+    right: 15px;
+    font-size: 40px;
+    cursor: pointer;
 }
