--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -43,7 +43,7 @@
             CSU Monterey Bay,<br>
             </p>
         
-            <p>Please note that this is a basic privacy policy and may not cover all aspects of your application. As this is a school project, it's important to ensure that any data collection and usage complies with the policies of CSU Monterey Bay and any applicable laws and regulations.</p>
+            <p>Please note that this is a basic privacy policy and may not cover all aspects of the application, as this is a school project</p>
         </body>
     </div>
 </div>
