--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs') %> 
 
-<div class="gradient-background">
+<div class="gradient-background" id="homePageGradient">
     <div class="background-box">
 
         <img id="logoHome" alt="What Can We Play Today Logo" src="/img/StandardImgLogo.png"/>
@@ -36,7 +36,7 @@
                     <p>Please refer to the screenshot below for a visual guide on how the settings should look like.</p>
         
                     <!-- Add screenshot here -->
-                    <img src ="img/privSettings.png" alt="Steam Privacy Settings Screenshot">
+                    <img src ="/img/privSettings.png" alt="Steam Privacy Settings Screenshot">
                     <video width = "640" height = "360" controls>
                         <source src = "/img/privSettings.mp4" type = "video/mp4">
                     </video>
