--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -508,9 +508,15 @@ ul, li {
     /* left: 100; */
     width: 100%;
     height: 30%;
+    align-items: center;
+    justify-content: center;
+
 }
 .modal-content{
+    display: flex;
     background-color: #171A21;
+    /* justify-content: center;
+    align-items: center; */
     color: white;
     position: absolute;
     width: 50%;
@@ -534,4 +540,25 @@ ul, li {
     right: 15px;
     font-size: 40px;
     cursor: pointer;
+}
+
+.video-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+#close, #close2{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #6F9F31;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+    text-align: center;
+    text-decoration: none;
+
 }
