--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,6 @@
                 <div class = "modal-content">
                         <div class="background-box-pp">
                     <span id = "back"> &times; </span>
-                    <span id = "close"> I UNDERSTAND </span>
                     <h2>Disclaimer: Privacy Settings for Steam Users</h2>
 
                     <p>In order for "What Can We Play Today" to function properly, your Steam profile and game details need to be set to public. Here's how you can change these settings:</p>
@@ -36,10 +35,15 @@
                     <p>Please refer to the screenshot below for a visual guide on how the settings should look like.</p>
         
                     <!-- Add screenshot here -->
-                    <img src ="/img/privSettings.png" alt="Steam Privacy Settings Screenshot">
+                    <div class = "video-content">
                     <video width = "640" height = "360" controls>
                         <source src = "/img/privSettings.mp4" type = "video/mp4">
                     </video>
+                    </div>
+
+                    <br>
+                    <span id = "close"> I UNDERSTAND </span>
+
                 </div>
                 </div>
              </div>
@@ -48,7 +52,6 @@
                 <div class = "modal-content">
                     <div class="background-box-pp">
                     <span id = "back2"> &times; </span>
-                    <span id = "close2"> I UNDERSTAND </span>
                     <h2>Disclaimer: Privacy Settings for Steam Users</h2>
 
                     <p>In order for "What Can We Play Today" to function properly, your Steam profile and game details need to be set to public. Here's how you can change these settings:</p>
@@ -64,10 +67,14 @@
                     <p>Please refer to the screenshot below for a visual guide on how the settings should look like.</p>
         
                     <!-- Add screenshot here -->
-                    <img src ="img/privSettings.png" alt="Steam Privacy Settings Screenshot">
+                    <div class = "video-content">
                     <video width = "640" height = "360" controls>
                         <source src = "/img/privSettings.mp4" type = "video/mp4">
                     </video>
+                    <br>
+                    </div>
+                    <span id = "close2"> I UNDERSTAND </span>
+
                 </div>
                 </div>
              </div>
@@ -77,7 +84,8 @@
     let modalTrigger = document.getElementById('loginModal');
     var modal = document.getElementById("modal");
     modalTrigger.addEventListener('click', function(){
-        modal.style.display = "block";
+        modal.style.display = "flex";
+
     });
 
 
@@ -89,7 +97,7 @@
     let modalTrigger2 = document.getElementById('loginModal2');
     var modal2 = document.getElementById("modal2");
     modalTrigger2.addEventListener('click', function(){
-        modal2.style.display = "block";
+        modal2.style.display = "flex";
     });
 
     var acceptButton2 = document.getElementById("close2");
@@ -100,6 +108,7 @@
     let back = document.getElementById("back");
     back.addEventListener('click', function(){
         window.location.href = "/";
+        modal.classList.remove("open");
     });
 
     let back2 = document.getElementById("back2");
