--- a/views/empty-room.ejs
+++ b/views/empty-room.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.ejs', {title: `What Can We Play Today?`, stylesheet: `generalStyles.css`}) %>
 <%- include('partials/navbarLogout.ejs') %>
 
 <!-- This file and route are called EMPTY ROOM but it's only technically empty for the first user. After more users join it'll change dynamically with Javascript -->
@@ -25,10 +25,11 @@
     </div>
 </div>
 <script>
-    // Setup our Socket connections
+    // Sets up our Socket connections
     const socket = io('<%= url %>');
     socket.on('connection');
 
+    // Initializes sessions for filtering
     sessionStorage.setItem('tagSelection', '');
     sessionStorage.setItem('categorySelection', '');
     sessionStorage.setItem('priceSelection', '');
@@ -45,10 +46,8 @@
      
     // Receives data from Back-end when other users join.
     socket.on('otherMsg', (data) => {
-        // DEBUG: Check output
-        // console.log(data);
                 
-        // Setup the image div with the first user that joins
+        // Sets up the image div with the first user that joins
         let divAppend = document.getElementById('toGen');
         let current = `<img src = "${data[0][2]}"">`;
         divAppend.innerHTML = current;
@@ -72,6 +71,7 @@
         socket.emit('newList', {steamID: steamID, username: username, avatar: avatar, roomNumber: roomNumber});
     });
 
+    // Leave functionality to clear all user data
     let leave = document.getElementById('leave');
     leave.addEventListener('click', function() {
         let roomNumber = Cookies.get('roomNumber');
@@ -80,6 +80,7 @@
         window.location.href = "/leave";
     });
 
+    // Dynamically updates the page when a user leaves
     socket.on('refreshList2', () =>  {
         location.reload();
     });
@@ -89,6 +90,7 @@
         window.location.href = "/list";
     });
 
+    // Used to copy the room number
     function copyFunction() {
         let copyRoomNum = document.getElementById('roomNumber');
         let selection = window.getSelection();
@@ -101,23 +103,11 @@
         document.execCommand('copy');
     }
 
+    // Shows that the room code has been copied
     function showSuccess() {
         jSuites.notification({
             name: 'Copied to Clipboard',
-            // message: 'successs',
         });
     }
-
-    // let leave = document.getElementById('leave');
-    // leave.addEventListener('click', function() {
-    //     let steamID = Cookies.get('steamID');
-    //     let username = Cookies.get('username');
-    //     let avatar = Cookies.get('avatar');
-    //     let roomNumber = Cookies.get('roomNumber');
-    //     sessionStorage.clear();
-    //     window.location.href = "/leave";
-    //     socket.emit('generateList', {username: username});
-    //     socket.emit('leave', {steamID: steamID, username: username, avatar: avatar, roomNumber: roomNumber});
-
-    // });
+    
 </script>
