--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.ejs', {title: `Privacy Policy`, stylesheet: `privacyStyles.css`}) %>
 <%- include('partials/navbarBack.ejs', {linkToPage: `/`}) %>
 
 <div class="gradient-background">
