Major Routing Validation
Ensures most routes are protected and that routes shouldn't be accessed at improper areas (e.g. User trying to access List w/out even signing into Steam yet). Fixes roomMembers bug by making sure users shouldn't be able to access the List page without proper information.

--- a/views/room-choice.ejs
+++ b/views/room-choice.ejs
@@ -46,4 +46,13 @@
         document.getElementById('animationContainer').style.display = 'flex';
         document.querySelector(".gradient-background").style.display = "none";
     }
+    
+    // This essentially prevents the user from going back w the browser and 
+    // locks them here on this page. Using this so we don't have issues with 
+    // users trying to get back to the Steam Page OR the List Page (assuming 
+    // they left a room and got back here).
+    history.pushState(null, null, window.location.href);
+    window.addEventListener('popstate', function () {
+        history.pushState(null, null, window.location.href);
+    });
 </script>
